--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,6 @@
 cmake_minimum_required (VERSION 3.5)
 project (GCFFlasher VERSION 4.3.0)
 
-add_executable(${PROJECT_NAME})
-target_compile_definitions(${PROJECT_NAME}
-    PUBLIC
-    APP_VERSION="\"\"${PROJECT_VERSION}-beta\"\"")
-
-option(USE_FTD2XX "Use FTDI ftd2xx library on Windows" ON)
-
 set(COMMON_SRCS
         gcf.c
         buffer_helper.c
@@ -18,8 +11,15 @@ set(COMMON_SRCS
         u_mem.c
 )
 
+add_executable(${PROJECT_NAME} ${COMMON_SRCS})
+target_compile_definitions(${PROJECT_NAME}
+    PUBLIC
+    APP_VERSION="\"\"${PROJECT_VERSION}-beta\"\"")
+
+option(USE_FTD2XX "Use FTDI ftd2xx library on Windows" ON)
+
 if (UNIX)
-    target_sources(${PROJECT_NAME} PRIVATE ${COMMON_SRCS} main_posix.c)
+    target_sources(${PROJECT_NAME} PRIVATE main_posix.c)
 
 #----------------------------------------------------------------------
     if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
@@ -49,7 +49,7 @@ endif()
 
 #----------------------------------------------------------------------
 if (WIN32)
-    target_sources(${PROJECT_NAME} PRIVATE ${COMMON_SRCS} main_windows.c)
+    target_sources(${PROJECT_NAME} PRIVATE main_windows.c)
 
     if (MSVC)
         target_link_options(${PROJECT_NAME} PUBLIC "/NODEFAULTLIB:libcmt")
